--- a/model-training/notebook/train_model.ipynb
+++ b/model-training/notebook/train_model.ipynb
@@ -43,7 +43,7 @@
     "    imgsz=1024,\n",
     "    epochs=100,\n",
     "    cache=True,\n",
-    "    name='yolov9c',\n",
+    "    name='yolov8',\n",
     "    scale=0.1, \n",
     "    augment=True,\n",
     "    perspective=0.0001,\n",
